Fix AlbumDropdown CSS alignment

--- a/app/assets/stylesheets/16-album-menu-bar.css
+++ b/app/assets/stylesheets/16-album-menu-bar.css
@@ -5,11 +5,11 @@
     height: auto;
     padding: 3px;
     background-color: #282828;
-    position: absolute;
+    position: relative;
     color: white;
     border-radius: 4px;
     box-shadow: 0 16px 24px rgba(0, 0, 0, 0.3), 0 6px 8px rgba(0, 0, 0, 0.2);
-    left: 165px;
+    left: 0px;
 }
 
 .album-submenu {
